--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+.div2{
+  margin: 20px;
+  height: 500px;
+  width: 400px;
+  border:4px solid #282c34;
+}
